--- a/.env
+++ b/.env
@@ -1,2 +1,10 @@
-API_SECRET=BisaInternSynapsis@2024
+12API_SECRET=BisaInternSynapsis@2024
 TOKE_HOUR_LIFESPAN=8
+
+
+DB_HOST_POSTGRES=127.0.0.1
+DB_USER_POSTGRES=rendy
+DB_PORT_POSTGRES=5432
+DB_PW_POSTGRES=rendy
+DB_NAME_POSTGRES=rendy
+DB_APP_NAME=rendy
